src/objects/inscor__Account_360_Metric_Data__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account 360 Metric Data</relationshipLabel>
        <relationshipName>Account_360_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cache_Currency_Value__c</fullName>
        <label>Cache Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Account 360 Metric Data</relationshipLabel>
        <relationshipName>Account_360_Metric_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <label>Account 360 Metric Data</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Cache_Currency_Value__c</columns>
        <columns>inscor__Company__c</columns>
        <columns>inscor__Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AMD-{0}</displayFormat>
        <label>Account 360 Metric Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account 360 Metric Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>